--- a/Front/index.html
+++ b/Front/index.html
@@ -86,7 +86,7 @@
                                     </div>
                                 </div>
                                 <div class="d-flex justify-content-end">
-                                    <button type="submit" class="btn btn-primary">dropdownFilter</button>
+                                    <button type="submit" class="btn btn-primary">Filter</button>
                                 </div>
                             </form>
                         </div>
@@ -108,26 +108,7 @@
                                 <th scope="col">opciones</th>
                             </tr>
                         </thead>
-                        <tbody>
-                            <tr class="Information">
-                                <td>123</td>
-                                <td>HomeWork</td>
-                                <td>Math Homework</td>
-                                <td>18-12-2024</td>
-                                <td>31-12-2024</td>
-                                <td>High</td>
-                                <td>
-                                    <button type="button" class="btn btn-primary" data-bs-toggle="modal"
-                                        data-bs-target="#exampleModal">
-                                        Edit
-                                    </button>
-                                    <button type="button" class="btn btn-danger" data-bs-toggle="modal"
-                                        data-bs-target="#exampleModal">
-                                        Eliminar
-                                    </button>
-                                </td>
-                            </tr>
-                        </tbody>
+                        <tbody id="tableName"></tbody>
                     </table>
                 </div>
             </div>
@@ -199,6 +180,7 @@
             </div>
         </div>
 
+        <script src="app.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
             crossorigin="anonymous"></script>
